--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1>Logistics</h1>
+        <h1>Logistics
+          RivehaTech
+        </h1>
       </a>
 
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
